--- a/languages/en.json
+++ b/languages/en.json
@@ -16,7 +16,7 @@
     "description": "Hello, my name is Ezequiel! I am a passionate IT professional with experience in technical support, networks, and web development.\n\nMy focus is on providing efficient technical support solutions, ensuring optimal operation of systems and IT infrastructure. Additionally, I have skills in designing, implementing, and managing networks, ensuring their stability and security.\n\nI have also ventured into web development, creating interactive and visually appealing websites that adhere to the latest standards. I strive to deliver an exceptional user experience, ensuring usability and optimization of websites.\n\nI am always open to continuous learning and stay updated with the latest IT trends to provide innovative solutions.\n\nI am excited about the opportunity to connect with industry professionals and explore collaboration opportunities. Please feel free to contact me with a message or connection request.",
     "name": "Name:",
     "degree": "Degree:",
-    "degree-description": "Bachelor's Degree in progress",
+    "degree-description": "Computer Science Degree in progress",
     "phone": "Phone:",
     "address": "Address:",
     "birthday": "Birthday:",
